<resources>
    <string name="app_name">Roomies</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_manage_household">ManageHouseholdActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_ems">EmsActivity</string>
    <string name="title_activity_chore">ChoreActivity</string>
    <string name="title_activity_bulletin_board">BulletinBoardActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="username">Username (email)</string>
    <string name="displayname">Display Name</string>
    <string name="password">Password</string>
    <string name="phonenumber">Phone Number</string>
    <string name="gid">Group ID (optional)</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>

    <string name="logo">Logo</string>
    <string name="title_activity_create_bulletin">CreateBulletinActivity</string>
    <string name="title_activity_create_chore">CreateChoreActivity</string>
    <string name="title_activity_house_hold">HouseHoldActivity</string>
    <string name="title_activity_financial">Financial</string>
    <string name="title_activity_add_financial">AddFinancial</string>

    <string name="facebook_app_id">547318738758444</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_car_sharing">CarSharing</string>
    <string name="title_activity_claim_car">ClaimCar</string>
</resources>
