<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_two"
    android:orientation="vertical"
    android:gravity="bottom">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="172dp"
        android:layout_height="172dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:src="@drawable/roomlies_logo_new"
        android:contentDescription="Roomies Logo"/>

    <TextView
        android:text="@string/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_orange_dark" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edittxt_username"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_orange_light"  />

    <TextView
        android:text="@string/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_orange_dark"  />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edittxt_password"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_orange_light"  />

    <TextView
        android:text="@string/displayname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_orange_dark"  />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edittxt_displayname"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_orange_light"  />

    <TextView
        android:text="@string/phonenumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_orange_dark"  />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edittxt_phonenumber"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_orange_light"  />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:text="@string/register"
        android:id="@+id/button_register"
        android:background="@drawable/button_press"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/holo_orange_dark"
        android:onClick="FinalRegisterClick"
        android:typeface="serif" />

</LinearLayout>
